# phoebe

./: CMakeLists.txt  README.md  gen_avro.bat  rebuild_win64_vc12.bat
phoebe/: CMakeLists.txt  client.cpp  client.h
phoebe/avro/: get_records_request_t.h  get_records_request_t.json  get_records_response_t.h  get_records_response_t.json
programs/: CMakeLists.txt
programs/avrofile2kafka/: CMakeLists.txt  avrofile2kafka.cpp
programs/avrofile2postgres/: CMakeLists.txt  avro_postgres.cpp  avro_postgres.h  avrofile2postgres.cpp
programs/kafka-count-schemas/: CMakeLists.txt  kafka-count-schemas.cpp
programs/kafka-rm-schema/: CMakeLists.txt  kafka-rm-schema.cpp
programs/phoebe/: CMakeLists.txt  phoebe.cpp
samples/: CMakeLists.txt
samples/test_client/: CMakeLists.txt  test_client.cpp
